--- a/html/components/roster-tab/index.html
+++ b/html/components/roster-tab/index.html
@@ -1,7 +1,7 @@
 <div id="RosterTab" sbContext="ScoreBoard.CurrentGame" class="sbSegmentGroup">
   <div sbForeach="Team: 1,2: only" class="sbSegment">
     <div class="sbGroup sbHeader Name">
-      <span sbDisplay="Name" />
+      <span sbDisplay="Name"></span>
     </div>
     <div class="sbGroup League">
       <img class="Logo" sbAttr="src: Logo" sbClass="sbHide: Logo: sbIsEmpty" />
