--- a/html/components/sk-input/index.html
+++ b/html/components/sk-input/index.html
@@ -117,9 +117,9 @@
       </span>
       <button
         class="sbKeyControl Box"
-        sbClass="sbHide: /ScoreBoard.Settings.Setting(ScoreBoard.Penalties.UseLT)"
+        sbClass="sbHide: /ScoreBoard.Settings.Setting(ScoreBoard.Penalties.UseLT) | sbUnserved: p.HasUnserved"
         sbAttr="id:-:'Team[Team]JammerBox'"
-        sbToggle="p.PenaltyBox : Sitting"
+        sbToggle="p.PenaltyBox : sbInBox"
       >
         Box
       </button>
