--- a/html/views/overlay/index.html
+++ b/html/views/overlay/index.html
@@ -238,12 +238,12 @@
 
       <div class="PanelWrapperLeft">
         <div class="LowerThird Wrapper OverlayPanel AnimatedPanel PanelHideLeft" sbClass="Show: $.Panel: ==='LowerThird'">
-          <h4 class="Line1" sbDisplay="$.LowerThird.Line1" />
+          <h4 class="Line1" sbDisplay="$.LowerThird.Line1"></h4>
           <h5
             class="Line2"
             sbDisplay="$.LowerThird.Line2"
             sbCss="color: $.LowerThird.Style,Team(*).Color(overlay.fg): ovlToLowerThirdColorFg | background: $.LowerThird.Style,Team(*).Color(overlay.bg): ovlToLowerThirdColorBg"
-          />
+          ></h5>
         </div>
       </div>
     </div>
