--- a/html/nso/plt/index.css
+++ b/html/nso/plt/index.css
@@ -1,7 +1,7 @@
 body { user-select: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -o-user-select: none; }
 body[showTeam="1"]>.Content>[Team="2"], body[showTeam="2"]>.Content>[Team="1"] { display: none; }
 
-.Content { display: grid; grid: auto auto auto auto / 1fr 1fr; gap: 1px; }
+.Content { display: grid; grid: auto auto auto auto / 1fr 1fr; gap: var(--segment-gap); }
 body[showTeam="1"]>.Content { grid-template-columns: 1fr 0; }
 body[showTeam="2"]>.Content { grid-template-columns: 0 1fr; }
 .Content>.GameAdvance { grid-area: 1 / 1 / 2 / 3; }
