Add Penalty Clocks to Stream Overlay

--- a/html/components/plt-input/index.html
+++ b/html/components/plt-input/index.html
@@ -41,7 +41,7 @@
         <tr
           class="Skater Code"
           sbForeach="Skater:: rosterNumber: resort=RosterNumber"
-          sbAttr="role: Role | rosterNumber: RosterNumber | warn: PenaltyCount, Penalty(0).Code: pltToWarnLevel"
+          sbAttr="role: Role | rosterNumber: RosterNumber | warn: PenaltyCount, Penalty(0).Code: sbToWarnLevel"
           sbClass="Captain: Flags: ==='C'"
         >
           <td class="Role Bench sbShowOnLt" rowspan="2" sbClass="OnTrack: Role: ==='Bench'" sbSet="Role: 'Bench'">
