add jammer penalty clock to main display

--- a/html/components/plt-input/index.html
+++ b/html/components/plt-input/index.html
@@ -85,7 +85,7 @@
         <tr
           class="Skater Jam"
           sbForeach="Skater:: rosterNumber: resort=RosterNumber"
-          sbAttr="role: Role | rosterNumber: RosterNumber | warn: PenaltyCount, Penalty(0).Code: pltToWarnLevel"
+          sbAttr="role: Role | rosterNumber: RosterNumber | warn: PenaltyCount, Penalty(0).Code: sbToWarnLevel"
         >
           <td
             sbForeach="Penalty: 1,2,3,4,5,6,7,8,9,0: only"
