--- a/html/components/settings-tab/index.html
+++ b/html/components/settings-tab/index.html
@@ -133,7 +133,7 @@
           <option value="fill">Stretch</option>
         </select>
       </span>
-      <span></span>
+      <span><button sbToggle="$_HidePenaltyClocks" ApplyPreview="HidePenaltyClocks">Hide Penalty Clocks</button></span>
       <span></span>
       <span sbContext="/ScoreBoard.Media.Format(custom).Type(view)">
         <label>Custom Page View: </label>
