--- a/html/components/sbo-input/index.html
+++ b/html/components/sbo-input/index.html
@@ -187,7 +187,7 @@
           >Ruleset:
           <select id="newRuleset">
             <option
-              sbForeach="Ruleset:: _sbOrderRsAsTree: resort=Parent"
+              sbForeach="Ruleset:: sbOrderRsAsTree: resort=Parent"
               sbContext="/ScoreBoard.Rulesets"
               sbAttr="value: Id"
               sbDisplay="Name: sbIndentByParents: html"
