--- a/html/components/sk-sheet/index.html
+++ b/html/components/sk-sheet/index.html
@@ -1,6 +1,6 @@
 <div class="sbSegment" sbPrefix="t:[*]">
   <div class="sbGroup sbSheets SkSheet">
-    <table sbContext="^" sbForeach="Period: -0: _sbComparePeriod" class="Period">
+    <table sbContext="^" sbForeach="Period: -0: sbComparePeriod" class="Period">
       <col class="EditButton"></col>
       <col class="JamNumber"></col>
       <col class="Jammer"></col>
@@ -35,7 +35,7 @@
           <th class="AutoFit Gametotal">TOTAL</th>
         </tr>
       </thead>
-      <tbody sbForeach="Jam:: _sbCompareJam: onInsert=sbReverseOnNonSheet" sbContext=":TeamJam([Team])" class="Jam">
+      <tbody sbForeach="Jam:: sbCompareJam: onInsert=sbReverseOnNonSheet" sbContext=":TeamJam([Team])" class="Jam">
         <tr class="Edits" sbContext="^">
           <td class="EditButton Darker"></td>
           <td colspan="18" class="Buttons Darker">
@@ -148,7 +148,7 @@
           </td>
         </tr>
       </tbody>
-      <tbody class="Timeout sbShowOnOperator" sbForeach="Timeout:: _sbCompareJam: onInsert=sbReverseOnNonSheet"" sbAttr="Jam: PrecedingJamNumber,WalltimeStart: sksToToJamNumber" >
+      <tbody class="Timeout sbShowOnOperator" sbForeach="Timeout:: sbCompareJam: onInsert=sbReverseOnNonSheet"" sbAttr="Jam: PrecedingJamNumber,WalltimeStart: sksToToJamNumber" >
         <tr class="Timeout" sbClass="IsOR: Review, Owner: sksIsOrThisTeam">
           <td class="EditButton"><button sbCall="sksToggleEdit">✎</button></td>
           <td colspan="9" class="Type">
