--- a/html/views/standard/index.html
+++ b/html/views/standard/index.html
@@ -35,6 +35,15 @@
         ></div>
         <div class="Logo" sbCss="background-image: Logo: sbCssToUrl">&nbsp;</div>
         <div class="Score Box AutoFit" sbDisplay="Score"></div>
+        <div class="Penalties" sbClass="sbHide:&_HidePenaltyClocks">
+          <div
+            class="Box Red"
+            sbForeach="Position: -Jammer: penaltyTime,num: resort=PenaltyTime"
+            sbAttr="penaltyTime:PenaltyTime"
+            sbDisplay="PenaltyTime: sbToTime"
+            sbClass="InBox:PenaltyTime: > 0"
+          ></div>
+        </div>
         <div
           class="JamScore Box AutoFit"
           sbDisplay="JamScore"
@@ -60,6 +69,14 @@
         </div>
         <div
           class="ShowInJam Clock Jammer"
+          sbForeach="Position: Jammer,Pivot: only"
+          sbClass="HasLead: ^DisplayLead | Hidden: StarPass: dspShowJammer | HasClock: PenaltyTime: > 0"
+        >
+          <span class="Name AutoFit" sbAutoFitOn="PenaltyTime, &_HidePenaltyClocks" sbDisplay="Name, ^DisplayLead: dspToJammerName"></span>
+          <span class="PenaltyTime Box Red AutoFit" sbDisplay="PenaltyTime: sbToTime"></span>
+        </div>
+        <div
+          class="ShowInLineup ShowInTimeout Clock Jammer"
           sbForeach="Position: Jammer,Pivot: only"
           sbClass="HasLead: ^DisplayLead | Hidden: StarPass: dspShowJammer | HasClock: PenaltyTime: > 0"
         >
