some minor tweaks

--- a/html/components/penalty-list/index.html
+++ b/html/components/penalty-list/index.html
@@ -19,7 +19,7 @@
     </div>
     <div class="sbShowOnPbt Edit">
       <span>
-        <button sbCall="penSubstitute">Substitute</button>
+        <button sbClass="sbClickMe: CurrentSkater, TotalPenalties: penFoOrExp" sbCall="penSubstitute">Substitute</button>
         <button sbCall="penReassign">Reassign</button>
       </span>
       <span>
